--- a/generalStyle.css
+++ b/generalStyle.css
@@ -5,7 +5,8 @@ body {
 	font-size:18px;
 	color:#444;
 	background-color:#FAFAFA;
-	padding:0 10px
+	padding:0 10px;
+    touch-action: auto !important;
 }
 
 h1,h2,h3{
